Outline/ibuildAVL.err
betree.c: In function ‘b_findb’:
betree.c:218:16: warning: implicit declaration of function ‘get_Value’; did you mean ‘get_value’? [-Wimplicit-function-declaration]
    return v == get_Value(node(T)) ? get_value(node(T))
                ^~~~~~~~~
                get_value
betree.c:221:1: error: expected expression before ‘}’ token
 }
 ^
betree.c:221:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
At top level:
betree.c:310:13: warning: ‘T2Q’ defined but not used [-Wunused-function]
 static void T2Q(treeref T, int qpos) {
             ^~~
betree.c:181:16: warning: ‘balance’ defined but not used [-Wunused-function]
 static treeref balance(treeref T) {
                ^~~~~~~
betree.c:179:12: warning: ‘HDiff’ defined but not used [-Wunused-function]
 static int HDiff(treeref T) { printf("\n TO BE DONE "); return 0; }
            ^~~~~
betree.c:169:16: warning: ‘DRR’ defined but not used [-Wunused-function]
 static treeref DRR(treeref T) {
                ^~~
betree.c:163:16: warning: ‘DLR’ defined but not used [-Wunused-function]
 static treeref DLR(treeref T) { 
                ^~~
betree.c:157:16: warning: ‘SRR’ defined but not used [-Wunused-function]
 static treeref SRR(treeref T) {
                ^~~
betree.c:151:16: warning: ‘SLR’ defined but not used [-Wunused-function]
 static treeref SLR(treeref T) {
                ^~~
betree.c:83:12: warning: ‘max’ defined but not used [-Wunused-function]
 static int max(int a, int b) { return a>b ? a : b; }
            ^~~
betree.c:38:16: warning: ‘treearray’ defined but not used [-Wunused-variable]
 static treeref treearray[ARRLEN];
                ^~~~~~~~~
betree.c: In function ‘b_findb’:
betree.c:218:16: warning: implicit declaration of function ‘get_Value’; did you mean ‘get_value’? [-Wimplicit-function-declaration]
    return v == get_Value(node(T)) ? get_value(node(T))
                ^~~~~~~~~
                get_value
betree.c:221:1: error: expected expression before ‘}’ token
 }
 ^
betree.c:221:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
At top level:
betree.c:310:13: warning: ‘T2Q’ defined but not used [-Wunused-function]
 static void T2Q(treeref T, int qpos) {
             ^~~
betree.c:181:16: warning: ‘balance’ defined but not used [-Wunused-function]
 static treeref balance(treeref T) {
                ^~~~~~~
betree.c:179:12: warning: ‘HDiff’ defined but not used [-Wunused-function]
 static int HDiff(treeref T) { printf("\n TO BE DONE "); return 0; }
            ^~~~~
betree.c:169:16: warning: ‘DRR’ defined but not used [-Wunused-function]
 static treeref DRR(treeref T) {
                ^~~
betree.c:163:16: warning: ‘DLR’ defined but not used [-Wunused-function]
 static treeref DLR(treeref T) { 
                ^~~
betree.c:157:16: warning: ‘SRR’ defined but not used [-Wunused-function]
 static treeref SRR(treeref T) {
                ^~~
betree.c:151:16: warning: ‘SLR’ defined but not used [-Wunused-function]
 static treeref SLR(treeref T) {
                ^~~
betree.c:83:12: warning: ‘max’ defined but not used [-Wunused-function]
 static int max(int a, int b) { return a>b ? a : b; }
            ^~~
betree.c:38:16: warning: ‘treearray’ defined but not used [-Wunused-variable]
 static treeref treearray[ARRLEN];
                ^~~~~~~~~
./ibuildAVL: line 27: ./tree: No such file or directory
./ibuildAVL: line 29: ./tree: No such file or directory
./ibuildAVL: line 31: ./tree: No such file or directory
./ibuildAVL: line 33: ./tree: No such file or directory
./ibuildAVL: line 35: ./tree: No such file or directory
./ibuildAVL: line 37: ./tree: No such file or directory
./ibuildAVL: line 39: ./tree: No such file or directory
./ibuildAVL: line 41: ./tree: No such file or directory
./ibuildAVL: line 43: ./tree: No such file or directory
